# sentientOS

./: .gitignore  CURRENT_STATUS.md  README.md  bootstrap.sh  build_kernel.sh  docker-compose.yml  requirements.txt  test_system.sh
.github/: dependabot.yml
config/: conditions.yaml  rewards.yaml  router_config.toml  tool_registry.toml
crates/: Cargo.toml  README.md
crates/examples/: cartpole_random.rs  llm_env_demo.rs
crates/sentient-rl-agent/: Cargo.toml
crates/sentient-rl-agent/src/: buffer.rs  dqn.rs  lib.rs  policy.rs  ppo.rs  ppo_full.rs  random.rs  utils.rs
crates/sentient-rl-core/: Cargo.toml
crates/sentient-rl-core/src/: action.rs  agent.rs  environment.rs  error.rs  lib.rs  observation.rs  policy.rs  reward.rs  state.rs  trajectory.rs  value.rs
crates/sentient-rl-env/: Cargo.toml
crates/sentient-rl-env/src/: classic.rs  lib.rs  llm.rs  registry.rs  sentient_envs.rs  wrappers.rs
crates/sentient-schema/: Cargo.toml
crates/sentient-schema/examples/: basic_validation.rs
crates/sentient-schema/src/: lib.rs  macros.rs  schema.rs  types.rs  validate.rs
docs/: PHASE_2_3_README.md  PHASE_3_5_VERIFICATION_REPORT.md  phase_7_5_enhancements.md
examples/: activity_loop_example.rs  phase2_demo.sh
rl_agent/: agent_skeleton.py  continuous_learning.py  dashboard.py  deploy_policy.py  evaluate_agent.py  online_learning.py  orchestrator.py  ppo_agent.py  test_agent.py  trace_monitor.py  train_agent.py
scripts/: CLEANUP_PLAN.md  activity_feed_bridge.py  check-ci-status.sh  checksums.txt  ci-test-local.sh  controlled_llm_observer.py  demo_llm_pipeline.py  dependency_audit.py  fast_goal_processor.py  generate_bootstrap_traces.py  install-continuous-learning.sh  list_ollama_models.py  migrate_to_rust_rl.sh  monitor-ci.sh  python_rl_cleanup.sh  python_rl_cleanup_fast.sh  reflective_analyzer.py  self_improvement_loop.py  sentient-learning.service  sentient-rl  sentient_test.py  start_integrated.sh  test-sentientos.sh  test_deepseek_integration.py  test_llm_pipeline.py  test_ollama_direct.py  test_ollama_integration.sh  test_pipeline.py  test_sentient_goal.py  trace_collector.py  unified_admin_panel.py  validate-boot.sh  validate_configs.py  validate_dependencies.py  validate_phase6.py  validate_structure.py  validate_system.py  validate_traces.py  verify_rust_rl.sh
sentient-bootloader/: Cargo.toml  build.rs
sentient-bootloader/.cargo/: config.toml
sentient-bootloader/esp/: NvVars  bootmodel.toml  inference_config.json  neuro_model.gguf  startup.nsh
sentient-bootloader/esp/EFI/BOOT/: .gitkeep
sentient-bootloader/scripts/: create-boot-disk.sh
sentient-bootloader/src/: boot_info.rs  color.rs  config.rs  file_loader.rs  hardware.rs  launch.rs  main.rs  model.rs  serial.rs
sentient-kernel/: Cargo.toml  build.rs  build.sh  build_efi.sh  linker.ld  rust-toolchain.toml  x86_64-sentient.json
sentient-kernel/.cargo/: config.toml
sentient-kernel/src/: allocator.rs  boot_info.rs  interrupts.rs  logger.rs  main.rs  memory.rs  serial.rs  vga.rs
sentient-kernel/src/ai/: inference.rs  mod.rs  runtime.rs  scheduler.rs
sentient-kernel/src/arch/x86_64/: boot.s
sentient-kernel/src/drivers/: acpi.rs  mod.rs  pci.rs
sentient-kernel/src/mm/: frame_allocator.rs  mod.rs
sentient-kernel/src/shell/: mod.rs
sentient-kernel/src/sys/: mod.rs  panic.rs  time.rs
sentient-memory/: Cargo.toml
sentient-memory/src/: lib.rs  rl_store.rs
sentient-shell/: AI_SERVICES_STATUS.md  Cargo.toml  README.md  build.rs  test_local.sh
sentient-shell/config/: models.toml
sentient-shell/docs/: boot-llm-integration.md  llm-routing-phase1.md  models-configuration.md  phase1-summary.md  service-manager-summary.md  tool-use-framework.md  tool-use-summary.md
sentient-shell/examples/: test_boot_llm.rs  test_prefixes.rs  test_stream_parser.rs
sentient-shell/models/: .gitkeep
sentient-shell/scripts/: test-boot-llm.sh  test-llm-routing.sh  test-ollama-stream.sh  test-phase1-final.sh  test-rag.sh  test-tools.sh  test_schema_ollama.sh
sentient-shell/src/: ai.rs  boot_llm.rs  commands.rs  commands_functions.rs  inference.rs  lib.rs  main.rs  package.rs  policy_injector.rs  rl_training.rs  serial.rs  shell_state.rs  validated_exec.rs
sentient-shell/src/ai_router/: cli.rs  config.rs  enhanced_router.rs  intelligent_router.rs  intent.rs  llm_cli.rs  llm_cli_extra.rs  mod.rs  registry.rs  router.rs  stream_parser.rs
sentient-shell/src/ai_router/providers/: boot.rs  local.rs  mod.rs  ollama.rs
sentient-shell/src/bindings/: mod.rs  python_utils.rs  rl_policy.rs  trace_bridge.rs
sentient-shell/src/commands/: mod.rs  rag_tool.rs  rl_infer.rs  rl_retrain.rs  rl_trace.rs  sentient_goal.rs
sentient-shell/src/hivefix/: agent.rs  api.rs  audit.rs  communicator.rs  error_injector.rs  mod.rs  patch.rs  prompts.rs  rollback.rs  sandbox.rs  sandbox_security.rs
sentient-shell/src/llm/: functions.rs  mod.rs
sentient-shell/src/package/core/: ask.rs  calc.rs  df.rs  hivefix.rs  hivefixd.rs  joke.rs  mod.rs  neofetch.rs  ps.rs  scratch.rs  timer.rs  todo.rs  top.rs
sentient-shell/src/rag/: cli.rs  embedder.rs  generator.rs  index.rs  mod.rs  reranker.rs  retriever.rs
sentient-shell/src/rag_tool_fusion/: condition_matcher.rs  mod.rs  rag_tool_router.rs  trace_logger.rs  types.rs
sentient-shell/src/schema/: constraints.rs  macros.rs  mod.rs  schema.rs  types.rs  validate.rs
sentient-shell/src/service/: api.rs  dependency.rs  health.rs  manager.rs  manifest.rs  mod.rs  process.rs  shutdown.rs
sentient-shell/src/services/: activity_loop.rs  goal_processor.rs  llm_observer.rs  mod.rs  reflective_analyzer.rs
sentient-shell/src/shell/: mod.rs  tools.rs
sentient-shell/src/tests/: mod.rs
sentient-shell/src/tools/: exec.rs  mod.rs  registry.rs  tests.rs
sentient-shell/src/web_ui/: handlers.rs  metrics.rs  mod.rs  rl_dashboard.rs
sentient-shell/tests/: ai_router_test.rs  ollama_integration.rs  sd_integration.rs  test_activity_loop.rs  test_llm_routing.rs  test_rag_tool_fusion.rs  test_trace_logging.rs
sentientctl/: Cargo.toml
sentientctl/src/: main.rs  rl_commands.rs
(+41 files in other folders)
