[package]
name = "sentient-bootloader"
version = "0.1.0"
edition = "2021"
authors = ["SentientOS Team"]

[dependencies]
uefi = "0.20"
uefi-services = "0.17"
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
spin = "0.10"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"

[profile.dev]
panic = "abort"

[build-dependencies]
anyhow = "1.0"

[features]
default = []
serial-debug = []  # Enable serial console for debugging (security risk!)