[package]
name = "sentient-kernel"
version = "0.1.0"
edition = "2021"
authors = ["SentientOS Team"]

[dependencies]
spin = "0.9"
log = { version = "0.4", default-features = false }
linked_list_allocator = "0.10"
x86_64 = "0.14"
uart_16550 = "0.3"
volatile = "0.5"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.14", default-features = false }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"

[profile.dev]
panic = "abort"

[build-dependencies]
cc = "1.0"