[package]
name = "sentient-kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
uefi = { version = "0.20", features = ["alloc"] }
# uefi-services = "0.17" # Conflicts with our allocator
log = { version = "0.4", default-features = false }
spin = "0.10"
x86_64 = "0.14"
linked_list_allocator = "0.10"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.14", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"