[package]
name = "sentient-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
bincode = "1.3"
flate2 = "1.0"
rand = "0.8"
ndarray = { version = "0.15", features = ["serde"] }

# RL crates (when available)
# sentient-rl-core = { path = "../crates/sentient-rl-core" }

[lib]
name = "sentient_memory"
path = "src/lib.rs"