[package]
name = "sentient-shell"
version = "1.0.0"
edition = "2021"
authors = ["SentientOS Team"]

[dependencies]
# Serial I/O (optional for testing without hardware)
serialport = { version = "4.3", optional = true }

# HTTP Client for AI services
reqwest = { version = "0.11", features = ["json", "blocking"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime for HTTP
tokio = { version = "1", features = ["full"] }

# Base64 for image data
base64 = "0.21"

# SHA256 for image hashing
sha2 = "0.10"

# Terminal handling
crossterm = "0.27"

# Command parsing
clap = { version = "4", features = ["derive"] }

# ONNX inference (optional)
tract-onnx = { version = "0.21", optional = true }
ort = { version = "2.0.0-rc.2", optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Directory utilities
dirs = "5.0"

# Lazy static for global state
lazy_static = "1.4"

# Temporary files for sandboxing
tempfile = "3.8"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# TOML configuration
toml = "0.8"

# Random number generation
rand = "0.8"

# Regular expressions
regex = "1.5"

# Process management
which = "6.0"

# Python embedding
pyo3 = { version = "0.20", features = ["auto-initialize"] }

# Terminal colors
colored = "2.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Terminal detection
atty = "0.2"


# Unix-specific features
[target.'cfg(unix)'.dependencies]
nix = "0.26"
libc = "0.2"

[features]
default = ["local-inference"]
local-inference = ["tract-onnx"]
onnxruntime = ["ort"]
serial = ["serialport"]

[dev-dependencies]
# Testing
mockito = "1.2"
serial_test = "3.0"
tempfile = "3.8"

[[bin]]
name = "sentient-shell"
path = "src/main.rs"