[package]
name = "sentientctl"
version = "1.0.0"
edition = "2021"
authors = ["SentientOS Team"]
description = "Unified CLI for SentientOS management"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking"] }
sysinfo = "0.30"
notify = "6.0"

[[bin]]
name = "sentientctl"
path = "src/main.rs"