[package]
name = "sentient-rl-core"
version = "0.1.0"
edition = "2021"
authors = ["SentientOS Contributors"]
description = "Core reinforcement learning traits and types for SentientOS"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mscrrnt/sentientos"
readme = "README.md"
keywords = ["reinforcement-learning", "rl", "ai", "machine-learning"]
categories = ["science", "algorithms"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Math and numerical computation
ndarray = { version = "0.15", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"
num-traits = "0.2"

# Async runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "rl_benchmarks"
harness = false