[package]
name = "sentient-rl-env"
version = "0.1.0"
edition = "2021"
authors = ["SentientOS Contributors"]
description = "Reinforcement learning environments for SentientOS"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mscrrnt/sentientos"
readme = "README.md"
keywords = ["reinforcement-learning", "environment", "gym", "simulation"]
categories = ["science", "simulation"]

[dependencies]
# Internal dependencies
sentient-rl-core = { path = "../sentient-rl-core" }

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Math and numerical computation
ndarray = { version = "0.15", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"
nalgebra = { version = "0.32", optional = true }

# Async runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"

# Logging
tracing = "0.1"

# Lazy static
lazy_static = "1.4"

# Visualization (optional)
plotters = { version = "0.3", optional = true }
image = { version = "0.24", optional = true }

# Physics simulation (optional)
rapier2d = { version = "0.17", optional = true }
rapier3d = { version = "0.17", optional = true }

[features]
default = []
visualization = ["plotters", "image"]
physics-2d = ["rapier2d", "nalgebra"]
physics-3d = ["rapier3d", "nalgebra"]

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
approx = "0.5"