[package]
name = "sentient-schema"
version = "0.1.0"
edition = "2021"
authors = ["SentientOS Team"]
description = "Lightweight schema validation framework for SentientOS"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
anyhow = "1.0"

# For macro development
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
# Testing
pretty_assertions = "1.4"